k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foot-app-service
spec:
  selector:
    app: foot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
