k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-http-solver
  annotations:
    cert-manager.io/http01-ingress-class: "traefik"
spec:
  rules:
    - host: foot.badr.cloud
      http:
        paths:
          - path: /.well-known/acme-challenge/*
            pathType: Prefix
            backend:
              service:
                name: cm-acme-http-solver
                port:
                  number: 80
